# ibron

./: .gitattributes  Cargo.toml  NOTICE  README.md
assets/: ibron.appdata.xml  ibron.desktop
assets/flatpak/: com.ibrahimokdadov.ibron.appdata.template.xml  com.ibrahimokdadov.ibron.json  com.ibrahimokdadov.ibron.template.json
assets/shell-integration/: ibron.fish  ibron.ps1  ibron.sh
config/src/: config.rs  keyassignment.rs  unix.rs
crates/ibron-blocks/: Cargo.toml
crates/ibron-blocks/src/: block.rs  lib.rs  manager.rs
docs/superpowers/plans/: 2026-04-18-ibron-phase1-fork-and-scaffold.md  2026-04-18-ibron-phase1b-rebrand.md  2026-04-18-ibron-phase2-shell-integration.md  2026-04-18-ibron-phase3-block-manager.md
docs/superpowers/plans/notes/: phase1-scaffold-survey.md
docs/superpowers/specs/: 2026-04-18-ibron-v01-command-blocks-design.md
ibron/: Cargo.toml
ibron-gui/: Cargo.toml
ibron-gui/src/: commands.rs  frontend.rs  main.rs
ibron-gui/src/termwindow/: block_ops.rs  mod.rs
ibron-gui/src/termwindow/render/: pane.rs
ibron-mux-server/: Cargo.toml
ibron/src/: main.rs  shell_integration.rs
scripts/: build-env.sh
term/src/: terminal.rs
term/src/terminalstate/: performer.rs
wezterm-gui-subcommands/src/: lib.rs
wezterm-toast-notification/src/: dbus.rs  windows.rs
